# agile-home-dashboard

./: .pre-commit-config.yaml  CHANGELOG.md  Home.py  LICENSE  README.md  agile_home_dashboard.py  pyproject.toml  utils.py
.github/: release_workflow.md
.streamlit/: config.toml
Pages/: Kettle_Pricing.py
pages/: Dishwasher.py  Kettle.py  Kettle_Pricing.py  Oven_Pricing.py  Washing_Machine.py  Washing_Machine_Pricing.py
