[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Agile-Home-Dashboard"
version = "0.0.1"
description = "A simple Streamlit app"
authors = [{name = "Katie Lukow"}]
requires-python = ">=3.9"
dependencies = [
"streamlit>=1.0.0",
"plotly>=5.0",
"altair>=4.2.2"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
