[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Agile-Home-Dashboard"
version = "0.1.0"
description = "A dashboard for Octopus Agile users to optimise appliance usage"
authors = [{name = "Katie Lukow"}]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.41.0",
    "plotly>=5.0",
    "altair<5.0",
    "scipy>=1.0.0 "
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
extend-exclude = ["__init__.py"]
fix = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins: Check for Python builtins being used as variables or parameters
    "B",    # flake8-bugbear: Find likely bugs and design problems
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes: Detect various errors by parsing the source file
    "I",    # isort: Check and enforce import ordering
    "ISC",  # flake8-implicit-str-concat: Check for implicit string concatenation
    "TID",  # flake8-tidy-imports: Validate import hygiene
    "UP",   # pyupgrade: Automatically upgrade syntax for newer versions of Python
    "SLF001",  # flake8-string-format: Check for private object name access
]

ignore = ["E501","E741"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
